[tool.poetry]
name = "7407-DRIVECODE-TEMPLATE"
version = "0.1.0"
description = "Team 7407 Wired Boars 2022-2023 Robot Code"
authors = ["Sebastian Plunkett <gamebot60000@gmail.com>","Sidharth Rao <sidharthmrao@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.12"
robotpy-toolkit-7407 = "^2023.2.0.0"
pre-commit = "^3.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
